--- a/settings/tum.yaml
+++ b/settings/tum.yaml
@@ -11,19 +11,19 @@ Camera:
     rows: 3
     cols: 3
     dt: f
-    data: [ 190.978477, 0, 254.931706, 0, 190.973307, 256.897442, 0, 0, 1.0 ]
+    data: [ 190.97847715128717, 0, 254.93170605935475, 0, 190.9733070521226, 256.8974428996504, 0, 0, 1.0 ]
 
   Distortion: !!opencv-matrix
     rows: 4
     cols: 1
     dt: f
-    data: [ 0.003482389402, 0.000715034845, -0.002053236141, 0.000202936736 ]
+    data: [ 0.0034823894022493434, 0.0007150348452162257, -0.0020532361418706202, 0.00020293673591811182 ]
 
-  Distortion_Model: equidistant
+  DistortionModel: equidistant
 
 # ORB
 ORB:
-  Features: 3000
+  Features: 1500
   ScaleFactor: 1.2
   Levels: 8
   IniThFAST: 20
@@ -31,12 +31,12 @@ ORB:
 
 # IMU
 IMU:
-  NoiseGyro: 5.817764e-06
-  WalkGyro: 9.696273e-07
-  NoiseAcc: 8.333333e-06
-  WalkAcc: 1.96e-05
+  NoiseGyro: 0.00016
+  WalkGyro: 2.2e-05
+  NoiseAcc: 0.0028
+  WalkAcc: 0.00086
 
-  Frequency: 100
+  Frequency: 200
 
   GyroBias: !!opencv-matrix
     rows: 3
@@ -50,19 +50,19 @@ IMU:
     dt: f
     data: [ 0, 0, 0 ]
 
-  Rbc: !!opencv-matrix
+  Rcb: !!opencv-matrix
     rows: 3
     cols: 3
     dt: f
-    data: [ 0.007812974043, -0.004279137589, 0.9999603629,
-            -0.9998595715, -0.01486804709, 0.007748560049,
-            0.01483429782, -0.9998802543, -0.004394739866 ]
+    data: [ -0.9995250378696743, 0.029615343885863205, -0.008522328211654736,
+            0.0075019185074052044, -0.03439736061393144, -0.9993800792498829,
+            -0.02989013031643309, -0.998969345370175, 0.03415885127385616 ]
 
-  tbc: !!opencv-matrix
+  tcb: !!opencv-matrix
     rows: 3
     cols: 1
     dt: f
-    data: [ 1.143898845, -0.312718451, 0.7265462279 ]
+    data: [ 0.04727988224914392, -0.047443232143367084, -0.0681999605066297 ]
 
 # View
 View:
