--- a/settings/euroc.yaml
+++ b/settings/euroc.yaml
@@ -18,7 +18,7 @@ Camera:
     dt: f
     data: [ -0.28340811, 0.07395907, 0.00019359, 1.76187114e-05 ]
 
-  Distortion_Model: radtan
+  DistortionModel: radtan
 
 # ORB
 ORB:
@@ -30,7 +30,7 @@ ORB:
 
 # IMU
 IMU:
-  NoiseGyro: 1.7e-4
+  NoiseGyro: 1.6968e-04
   WalkGyro: 1.9393e-05
   NoiseAcc: 2.0000e-3
   WalkAcc: 3.0000e-03
